<resources>
    <string name="app_name">Order_Management_App</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mi Casita</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_empleados">Empleados</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_ordenes">Ordenes</string>
    <string name="menu_asignaciones">Asignaciones</string>
    <string name="agregar_empleado">AGREGAR EMPLEADO</string>
    <string name="nombre_empleado">NOMBRE EMPLEADO</string>
    <string name="direccion_empleado">DIRECCION EMPLEADO</string>
    <string name="telefono_empleado">TELEFONO EMPLEADO</string>
    <string name="email_empleado">EMAIL EMPLEADO</string>
    <string name="editar_empleado">EDITAR EMPLEADO</string>
    <string name="agregar_producto">AGREGAR PRODUCTO</string>
    <string name="editar_producto">EDITAR PRODUCTO</string>
    <string name="nombre_producto">NOMBRE PRODUCTO</string>
    <string name="codigo_producto">CODIGO PRODUCTO</string>
    <string name="precio_producto">PRECIO PRODUCTO</string>
    <string name="descripcion_producto">DESCRIPCION PRODUCTO</string>
    <string name="cantidad_producto">CANTIDAD PRODUCTO</string>
    <string name="agregar_orden">AGREGAR ORDEN</string>
</resources>