<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_empleados"
            android:icon="@drawable/ic_baseline_people_alt_24"
            android:title="@string/menu_empleados" />

        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_baseline_clean_hands_24"
            android:title="@string/menu_productos" />

        <item
            android:id="@+id/nav_ordenes"
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:title="@string/menu_ordenes" />

        <item
            android:id="@+id/nav_asignaciones"
            android:icon="@drawable/ic_baseline_playlist_add_24"
            android:title="@string/menu_asignaciones" />
    </group>
</menu>