<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_empleados">


    <fragment
        android:id="@+id/nav_empleados"
        android:name="com.micasita.order_management_app.controllers.empleados.EmpleadosFragment"
        android:label="@string/menu_empleados"
        tools:layout="@layout/fragment_empleados" />
    <fragment
        android:id="@+id/nav_productos"
        android:name="com.micasita.order_management_app.controllers.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />
    <fragment
        android:id="@+id/nav_ordenes"
        android:name="com.micasita.order_management_app.controllers.ordenes.OrdenesFragment"
        android:label="@string/menu_ordenes"
        tools:layout="@layout/fragment_ordenes" />
    <fragment
        android:id="@+id/nav_asignaciones"
        android:name="com.micasita.order_management_app.controllers.asignaciones.AsignacionesFragment"
        android:label="@string/menu_asignaciones"
        tools:layout="@layout/fragment_asignaciones" />
</navigation>