<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_normal"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:text="@string/editar_producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>


    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/ed_nombre_producto_edit"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/font_size_normal"
        android:gravity="center"
        android:hint="@string/nombre_producto"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="40dp" />


    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/ed_descripcion_producto_edit"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/font_size_normal"
        android:gravity="center"
        android:hint="@string/descripcion_producto"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/ed_precio_producto_edit"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/font_size_normal"
        android:gravity="center"
        android:hint="@string/precio_producto"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/cantidad_producto_edit"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/font_size_normal"
        android:gravity="center"
        android:hint="@string/cantidad_producto"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btn_edit_producto_data"
        android:textSize="@dimen/font_size_normal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/editar_producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>


</LinearLayout>